@@ -3,11 +3,12 @@ This file documents the revision history for Perl extension Mojo.
 0.9003  2009-03-05 00:00:00
         - Rewrote MojoX::Renderer, it is not backward compatible and
           templates need to be renamed in the following 3 part format
-          "index.html.tt"!
+          "name.format.handler", for example "index.html.tt"!
         - Added full HTTP 1.1 pipelining support to all Mojo layers.
         - Added layout support to MojoX::Renderer.
         - Made render call optional.
         - Added format support to MojoX::Routes.
+        - Removed Mojolicious::Dispatcher.
         - Added wildcard symbol support to MojoX::Routes and rewrote many
           routes internals.
         - Added Makefile.PL generator.
